# makishima_backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/app/anilist/: routes.rs  types.rs
src/app/discord/: error.rs  routes.rs  types.rs
src/entities/: anilist.rs  mod.rs  prelude.rs  user.rs
src/util/: graphql.rs  jwt.rs  mod.rs  oauth.rs
