[package]
name = "makishima_backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["cookies"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
reqwest = { version = "0.12.0", features = ["json"] }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-actix-native-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
url = "2.5.0"
